Delete part of paragraph content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <p> lorem ipsum dolor sit amet, consecteteur elit.</p>
+    <p> lorem ipsum</p>
     <img src="images/icon.svg" alt="">
     <a href="https://www.wikipedia.org/">wikipedia</a>
   </main>
