--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <p> lorem ipsum</p>
     <img src="images/icon.svg" alt="">
-    <a href="https://www.wikipedia.org/">wikipedia</a>
+    <a href="https://www.wikipedia.org/">Wikipedia</a>
   </main>
 </body>
 </html>
