Add appropriate image file name

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </header>
 
   <main>
-    <p> lorem ipsum</p>
-    <img src="images/icon.svg" alt="">
+    <p> Lorem ipsum</p>
+    <img src="images/logo.svg" alt="">
     <a href="https://www.wikipedia.org/">Wikipedia</a>
   </main>
 </body>
